--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="output">
           <div>Lavel</div>
-          <div class="lavel">1</div>
+          <div class="lavel"></div>
         </div>
       </div>
     </div>
