--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="container">
-    <form class="registration-form notvisible">
+    <form class="registration-form">
       <label for="nickname" class="nickname-label">Enter your nickname</label>
       <input type="text" class="nickname-input" placeholder="Player1">
       <button type="submit" class="submit-btn">Ok</button>
@@ -36,8 +36,8 @@
           <div class="score">0</div>
         </div>
         <div class="output">
-          <div>Lavel</div>
-          <div class="lavel"></div>
+          <div>Level</div>
+          <div class="level">0</div>
         </div>
       </div>
     </div>
