--- a/index.html
+++ b/index.html
@@ -10,7 +10,39 @@
 </head>
 <body>
   <div class="container">
-    <form class="registration-form">
+    <aside class="aside-menu">
+      <button class="close-btn">
+        <svg>
+          <use xlink:href="assets/sprites.svg#close-btn" />
+        </svg>
+      </button>
+      <div>
+        <button class="rules aside-btn">Rules</button>
+      </div>
+      <div>
+        <button class="recordes aside-btn">Recordes</button>
+      </div>
+      <div>
+        <div class="sound-btns">
+          <button class="sound-on sound-btn active">
+            <svg>
+              <use xlink:href="assets/sprites.svg#sound-on" />
+            </svg>
+          </button>
+          <button class="sound-off sound-btn">
+            <svg>
+              <use xlink:href="assets/sprites.svg#sound-off" />
+            </svg>
+          </button>
+        </div>
+      </div>
+    </aside>
+    <div class="menu-burger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <form class="registration-form notvisible">
       <label for="nickname" class="nickname-label">Enter your nickname</label>
       <input type="text" class="nickname-input" placeholder="Player1">
       <button type="submit" class="submit-btn">Ok</button>
@@ -22,8 +54,16 @@
         <button class="rules btn">Rules</button>
         <button class="recordes btn">Recordes</button>
         <div class="sound-btns">
-          <button class="sound-on sound-btn active" data-sound="on"></button>
-          <button class="sound-off sound-btn" data-sound="off"></button>
+          <button class="sound-on sound-btn active" data-sound="on">
+            <svg>
+              <use xlink:href="assets/sprites.svg#sound-on" />
+            </svg>
+          </button>
+          <button class="sound-off sound-btn" data-sound="off">
+            <svg>
+              <use xlink:href="assets/sprites.svg#sound-off" />
+            </svg>
+          </button>
         </div>
       </div>
       <div class="tetris">
@@ -32,11 +72,19 @@
       </div>
       <div class="info">
         <div class="output">
-          <div>Score</div>
+          <div class="icon">
+            <svg>
+              <use xlink:href="assets/sprites.svg#star" />
+            </svg>
+          </div>
           <div class="score">0</div>
         </div>
         <div class="output">
-          <div>Level</div>
+          <div class="icon">
+            <svg>
+              <use xlink:href="assets/sprites.svg#trophy" />
+            </svg>
+          </div>
           <div class="level">0</div>
         </div>
       </div>
