--- a/index.html
+++ b/index.html
@@ -49,8 +49,15 @@
     </form>
     <div class="game-wrapper">
       <div class="buttons">
-        <button class="play btn">Play</button>
-        <button class="pause btn">Pause</button>
+        <button class="play btn">
+          <span>Play</span>
+        </button>
+        <button class="pause btn">
+          <span class="btn-text">Pause</span>
+        </button>
+        <button class="drop btn">
+          
+        </button>
         <button class="rules btn">Rules</button>
         <button class="recordes btn">Recordes</button>
         <div class="sound-btns">
