--- a/index.html
+++ b/index.html
@@ -51,12 +51,20 @@
       <div class="buttons">
         <button class="play btn">
           <span>Play</span>
+          <svg>
+            <use xlink:href="assets/sprites.svg#power" />
+          </svg>
         </button>
         <button class="pause btn">
           <span class="btn-text">Pause</span>
+          <svg>
+            <use class="pause-svg" xlink:href="assets/sprites.svg#pause" />
+          </svg>
         </button>
         <button class="drop btn">
-          
+          <svg>
+            <use xlink:href="assets/sprites.svg#drop" />
+          </svg>
         </button>
         <button class="rules btn">Rules</button>
         <button class="recordes btn">Recordes</button>
